# CSC568-Storage

./: README.md
ZFS/: README.md  hello.c  zipfs.c
hdfs-helper/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
hdfs-helper/include/: hdfs_fuse.h
hdfs-helper/src/: hdfs_access.c  hdfs_bmap.c  hdfs_chmod.c  hdfs_chown.c  hdfs_copy_file_range.c  hdfs_create.c  hdfs_destroy.c  hdfs_fallocate.c  hdfs_flock.c  hdfs_flush.c  hdfs_fsync.c  hdfs_fsyncdir.c  hdfs_getattr.c  hdfs_getxattr.c  hdfs_init.c  hdfs_ioctl.c  hdfs_link.c  hdfs_listxattr.c  hdfs_lock.c  hdfs_mkdir.c  hdfs_mknod.c  hdfs_open.c  hdfs_opendir.c  hdfs_poll.c  hdfs_read.c  hdfs_read_buf.c  hdfs_readdir.c  hdfs_readlink.c  hdfs_release.c  hdfs_releasedir.c  hdfs_removexattr.c  hdfs_rename.c  hdfs_rmdir.c  hdfs_setxattr.c  hdfs_statfs.c  hdfs_symlink.c  hdfs_truncate.c  hdfs_unlink.c  hdfs_utimens.c  hdfs_write.c  (+2 more)
